# rte

./: README.md  pyproject.toml
.github/workflows/: test.yml
cross_check/: Light_1_0_1_0.9.npz  Light_1_0_2_0.9.npz  Light_2_0_2_0.9.npz  SecondLight_1_0_1_0.9.npz  plot_cross_check.py
nb/: Cross-check_1.ipynb  CrossCheck_data.ipynb  Integration.ipynb
rte/: __init__.py  process.py  steps.py
src/: __init__.py  medium.py  process.py  sources.py  steps.py  utils.py  viewer.py
test/: test_integral.py
