[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name="RTE"
description = "Package for calculating the photon flux using the Radiative Transfer Equation"
version="0.0.1"

dependencies = [
    "vegas_params@git+https://github.com/Sheshuk/vegas_param",
    "tqdm",
    "loguru"
    ]

[tool.setuptools]
packages = ["rte"]

[project.optional-dependencies]
gui = ["PyOpenGL ~= 3.0", "PySide6 ~= 6.7", "pyqtgraph ~= 0.13"]
test = ["pytest"]
