[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name="RTE"
description = "Package for calculating the photon flux using the Radiative Transfer Equation"
dynamic = ["version"]

requires-python = ">=3.9"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "vegas_params~=0.1",
    "tqdm",
    "loguru"
    ]

[tool.setuptools.dynamic]
version = {attr = "rte.__version__"}

[tool.setuptools.package-dir]
rte = "src"

[project.optional-dependencies]
gui = ["PyOpenGL ~= 3.0", "PySide6 ~= 6.7", "pyqtgraph ~= 0.13"]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/RTESolution/rte"
Issues = "https://github.com/RTESolution/rte/issues"
